--- a/Hospital.js/index.html
+++ b/Hospital.js/index.html
@@ -21,6 +21,7 @@
                 <i class="fa fa-bars"></i>
             </a>
             </div>
+        </header>
     <main>
         <!-- Conteúdo da página aqui -->
     </main>
