feat: centralizando navbar

--- a/Hospital.js/index.html
+++ b/Hospital.js/index.html
@@ -23,9 +23,42 @@
             </div>
         </header>
     <main>
-        <!-- Conteúdo da página aqui -->
-    </main>
+        <div class="box">
+            <div class="span">
+                <section class="conteiner" id="cadastro">
 
+                </section>
+            </div>        
+        </div>
+        <div class="box">
+            <div class="span">
+                <section class="conteiner" id="editar">
+
+                </section>
+            </div>        
+        </div>
+        <div class="box">
+            <div class="span">
+                <section class="conteiner" id="buscar">
+
+                </section>
+            </div>        
+        </div>
+        <div class="box">
+            <div class="span">
+                <section class="conteiner" id="listar">
+
+                </section>
+            </div>        
+        </div>
+        <div class="box">
+            <div class="span">
+                <section class="conteiner" id="dadosgerais">
+
+                </section>
+            </div>        
+        </div>
+    </main>
     <footer>
         <p>&copy; Heal Care Hospital - Todos os direitos reservados</p>
     </footer>
