--- a/Hospital.js/index.html
+++ b/Hospital.js/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="topnav" id="myTopnav">
             <a class="active">HealCare</a>    
-            <a href="#cadastro">Cadastrar</a>
+            <a href="#cadastrar">Cadastrar</a>
             <a href="#editar">Editar</a>
             <a href="#buscar">Buscar</a>
             <a href="#listar">Listar</a>
@@ -23,37 +23,42 @@
             </div>
         </header>
     <main>
-        <div class="box">
+        <div class="box" id="cadastrar">
             <div class="span">
-                <section class="conteiner" id="dadosgerais">
+                <section class="conteiner" id="conteinercadastro">
+                    <p class="titulobox">Cadastro de paciente</p>
+                    
+                </section>
+            </div>        
+        </div>
+        <div class="box" id="editar">
+            <div class="span">
+                <section class="conteiner">
+                    <p class="titulobox">Editar paciente</p>
 
                 </section>
             </div>        
         </div>
-        <div class="box">
+        <div class="box" id="buscar">
             <div class="span">
-                <section class="conteiner" id="cadastro">
+                <section class="conteiner">
+                    <p class="titulobox">Buscar paciente</p>
 
                 </section>
             </div>        
         </div>
-        <div class="box">
+        <div class="box" id="listar">
             <div class="span">
-                <section class="conteiner" id="editar">
+                <section class="conteiner">
+                    <p class="titulobox">Listar pacientes</p>
 
                 </section>
             </div>        
         </div>
-        <div class="box">
+        <div class="box" id="dadosgerais">
             <div class="span">
-                <section class="conteiner" id="buscar">
-
-                </section>
-            </div>        
-        </div>
-        <div class="box">
-            <div class="span">
-                <section class="conteiner" id="listar">
+                <section class="conteiner">
+                    <p class="titulobox">Dados do Hospital</p>
 
                 </section>
             </div>        
